force-app/main/default/objects/Identification_Document__c/Identification_Document__c.object-meta.xml
<CustomObject>
    <label>Identification Document</label>
    <nameField>
        <label>Document Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Identification Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>