force-app/main/default/objects/Identification_Document__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Identification Documents</relationshipLabel>
    <relationshipName>Identification_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>