force-app/main/default/objects/Identification_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
                <default>true</default>
                <label>--None--</label>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Pan</fullName>
            </value>
            <value>
                <fullName>Aadhaar</fullName>
            </value>
            <value>
                <fullName>Voter Id</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>CKYC No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>