force-app/main/default/objects/Identification_Document__c/fields/Issuing_Country__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Country__c</fullName>
    <externalId>true</externalId>
    <label>Issuing Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>