force-app/main/default/objects/Identification_Document__c/recordTypes/Identification_Document.recordType-meta.xml
<RecordType>
    <fullName>Identification_Document</fullName>
    <active>true</active>
    <label>Identification Document</label>
</RecordType>